fix: modularized rag components

--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0663db04-7a34-4d71-b6b9-697d7787102c",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-06-10 05:47:24--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "--2025-06-10 07:58:41--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4014 (3.9K) [text/plain]\n",
-      "Saving to: ‘minsearch.py.9’\n",
+      "Saving to: ‘minsearch.py.14’\n",
       "\n",
-      "minsearch.py.9      100%[===================>]   3.92K  --.-KB/s    in 0s      \n",
+      "minsearch.py.14     100%[===================>]   3.92K  --.-KB/s    in 0s      \n",
       "\n",
-      "2025-06-10 05:47:24 (43.4 MB/s) - ‘minsearch.py.9’ saved [4014/4014]\n",
+      "2025-06-10 07:58:41 (11.5 MB/s) - ‘minsearch.py.14’ saved [4014/4014]\n",
       "\n"
      ]
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "be4ecc52-7e33-451b-a64a-601fd1daf4b7",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6aac4db0-1006-43e6-9d37-2aaa0bdded7f",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "14289541-4dec-469a-9b4e-3144a08ef9c8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2d2c8acb-d394-4f63-b1e5-ee75b56e2052",
    "metadata": {},
    "outputs": [
@@ -3442,7 +3442,7 @@
        "    'question': 'necessary for a certificate?'}]}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3453,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d1b3849d-4a8d-4726-8740-da1f0741e15c",
    "metadata": {},
    "outputs": [],
@@ -3468,7 +3468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ed17d794-2305-40b5-8ddb-69cc0404b82a",
    "metadata": {},
    "outputs": [
@@ -3481,7 +3481,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3492,7 +3492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5cfcc21b-b42b-482e-a438-c810e60694bc",
    "metadata": {},
    "outputs": [],
@@ -3505,17 +3505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "298bb16e-bf26-4eb2-a9cd-c26621ea3da0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7b75623a9c70>"
+       "<minsearch.Index at 0x72b66421b9b0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3526,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "35737c40-c6b2-4cba-b22d-aff9867ff395",
    "metadata": {},
    "outputs": [],
@@ -3552,7 +3552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "fc92b6c0-7b5f-4418-a697-388abcc0705b",
    "metadata": {},
    "outputs": [],
@@ -3569,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "22efa0dc-d398-4ee8-a2f8-3c6a2191cb6c",
    "metadata": {},
    "outputs": [
@@ -3598,7 +3598,7 @@
        "  'course': 'data-engineering-zoomcamp'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3633,7 +3633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "ba27c2b0-9dcb-432f-ad40-0c0180a86adc",
    "metadata": {},
    "outputs": [],
@@ -3654,7 +3654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "e90708d8-ef5a-4cca-8105-841fc03a0ba8",
    "metadata": {},
    "outputs": [],
@@ -3673,7 +3673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "ffa9ff6a-3f1f-4935-ae83-e846f9e09ad1",
    "metadata": {},
    "outputs": [],
@@ -3683,7 +3683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "e7abee9c-d1f4-463c-9ea0-97f667a8688b",
    "metadata": {},
    "outputs": [
@@ -3693,7 +3693,7 @@
        "'the course has already started. can i still join?'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3704,7 +3704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "d49be8de-e5aa-4544-b2e6-c23e612f8b7f",
    "metadata": {},
    "outputs": [
@@ -3754,7 +3754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "beed2445-7ff2-4253-b68a-9b258fc5b200",
    "metadata": {},
    "outputs": [],
@@ -3765,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "6785b2a3-65b8-44a0-bb5e-b5f561535d3a",
    "metadata": {},
    "outputs": [],
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "1b2788f1-e008-4b06-a623-4395ecd50e0c",
    "metadata": {},
    "outputs": [],
@@ -3789,17 +3789,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "id": "bfb86d68-0efc-41a8-9b68-cb4589d5cc31",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# why answer extraction so complicated gemini? haiyaa\n",
     "answer = response.candidates[0].content.parts[0].text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "id": "b896906f-3ee1-49dc-9bc7-e98d58cabe91",
    "metadata": {},
    "outputs": [
@@ -3807,7 +3808,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course. In order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’e by the deadline. Also, even if you don't register, you're still eligible to submit the homeworks as long as the form is still open and accepting submissions.\n"
+      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course. In order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ projects by the deadline.\n"
      ]
     }
    ],
@@ -3816,9 +3817,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f79dc3b-28ec-4312-a06d-3080ee6135f5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d81b113-b7b9-4bb3-bdd8-7e59c28dee2f",
+   "metadata": {},
+   "source": [
+    "### Modularize the RAG components - Search, Build Prompt, Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "92d685c1-abd8-451e-aef0-d92b9f255124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(query):\n",
+    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "    \n",
+    "    results = index.search(\n",
+    "        query=query, \n",
+    "        boost_dict=boost, \n",
+    "        num_results=5\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "82e3b25c-d8bd-43b4-9eaa-c3e6c3506c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(query, context):\n",
+    "    prompt_template = \"\"\"\n",
+    "        You're a teaching assistant.\n",
+    "        Use the only the facts in the CONTEXT to answer the QUESTION.\n",
+    "\n",
+    "        QUESTION: {question}\n",
+    "        CONTEXT:\n",
+    "        {context}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    prompt = prompt_template.format(question=query, context=context)\n",
+    "\n",
+    "    return prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "6376ba70-7dd0-4481-83e4-b61bdde7166c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm(prompt):\n",
+    "    client = genai.Client(api_key=gemini_api_key)\n",
+    "    \n",
+    "    response = client.models.generate_content(\n",
+    "        model=\"gemini-2.0-flash\",\n",
+    "        contents=prompt\n",
+    "    )\n",
+    "\n",
+    "    answer = response.candidates[0].content.parts[0].text.strip()\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "80344b1c-e74a-4326-a65b-9205550773d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag(query):\n",
+    "    search_results = search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    \n",
+    "    return print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d2920ede-828f-443a-ab85-4a0df99363c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a few ways to run Kafka, depending on the context:\n",
+      "\n",
+      "1.  **Using Java:**\n",
+      "\n",
+      "    *   Navigate to the project directory.\n",
+      "    *   Run the command: `java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java` (replace `<jar_name>` with the actual jar file name).\n",
+      "2.  **Using Python:**\n",
+      "\n",
+      "    *   Create a virtual environment (using `python -m venv env`).\n",
+      "    *   Activate the virtual environment (`source env/bin/activate` on MacOS/Linux or `env/Scripts/activate` on Windows).\n",
+      "    *   Install the required packages using `pip install -r ../requirements.txt`.\n",
+      "    *   Run the Python files within this activated environment.\n",
+      "    *   Remember to have Docker images up and running first.\n",
+      "3.  **Permissions:**\n",
+      "\n",
+      "    *   If you encounter a \"Permission denied\" error when running `build.sh`, use the command `chmod +x build.sh` in the `/docker/spark` directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'how do i run kafka?'\n",
+    "rag(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "bd8be667-2cc0-4676-b3a5-4dd171fb6af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'the course started already. can i still enrol?'\n",
+    "rag(q)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6488c3f-a18d-4ff3-aa7a-52d4aba68f2a",
+   "id": "84c0ef26-14a1-4b5d-90f4-826b7c0542fb",
    "metadata": {},
    "outputs": [],
    "source": []
