replaced toy-search with elastic-search

--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-06-10 07:58:41--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
+      "--2025-06-10 14:52:14--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/refs/heads/main/minsearch.py\n",
       "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 4014 (3.9K) [text/plain]\n",
-      "Saving to: ‘minsearch.py.14’\n",
+      "Length: 4073 (4.0K) [text/plain]\n",
+      "Saving to: ‘minsearch.py.7’\n",
       "\n",
-      "minsearch.py.14     100%[===================>]   3.92K  --.-KB/s    in 0s      \n",
+      "minsearch.py.7      100%[===================>]   3.98K  --.-KB/s    in 0s      \n",
       "\n",
-      "2025-06-10 07:58:41 (11.5 MB/s) - ‘minsearch.py.14’ saved [4014/4014]\n",
+      "2025-06-10 14:52:14 (51.0 MB/s) - ‘minsearch.py.7’ saved [4073/4073]\n",
       "\n"
      ]
     }
@@ -3512,7 +3512,7 @@
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x72b66421b9b0>"
+       "<minsearch.Index at 0x7940207592e0>"
       ]
      },
      "execution_count": 9,
@@ -3808,7 +3808,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course. In order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ projects by the deadline.\n"
+      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course. In order to get a certificate, you need to submit 2 out of 3 course projects an Projects by the deadlind review 3 peers’e. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.\n",
+      "Also, even if you don't register, you're still eligible to submit the homework. Be aware, however, that there will be deadlines for turning in homeworks and the final projects.\n"
      ]
     }
    ],
@@ -3834,7 +3835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "92d685c1-abd8-451e-aef0-d92b9f255124",
    "metadata": {},
    "outputs": [],
@@ -3853,7 +3854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "82e3b25c-d8bd-43b4-9eaa-c3e6c3506c9a",
    "metadata": {},
    "outputs": [],
@@ -3875,7 +3876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "6376ba70-7dd0-4481-83e4-b61bdde7166c",
    "metadata": {},
    "outputs": [],
@@ -3895,7 +3896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "80344b1c-e74a-4326-a65b-9205550773d0",
    "metadata": {},
    "outputs": [],
@@ -3910,7 +3911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "d2920ede-828f-443a-ab85-4a0df99363c3",
    "metadata": {},
    "outputs": [
@@ -3918,22 +3919,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are a few ways to run Kafka, depending on the context:\n",
+      "There are a few different ways to run Kafka depending on the context:\n",
       "\n",
-      "1.  **Using Java:**\n",
+      "1.  **For running Python files with Kafka:**\n",
       "\n",
-      "    *   Navigate to the project directory.\n",
-      "    *   Run the command: `java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java` (replace `<jar_name>` with the actual jar file name).\n",
-      "2.  **Using Python:**\n",
+      "    *   Create a virtual environment.\n",
+      "    *   Activate the virtual environment.\n",
+      "    *   Install the required packages from `requirements.txt` using `pip install -r ../requirements.txt`.\n",
+      "    *   Remember to activate the virtual environment every time you need it.\n",
+      "    *   If you encounter `ModuleNotFoundError: No module named 'kafka.vendor.six.moves'`, use `pip install kafka-python-ng` instead of `pip install kafka-python`.\n",
+      "    *   Make sure your Docker images are up and running before running the Python file.\n",
       "\n",
-      "    *   Create a virtual environment (using `python -m venv env`).\n",
-      "    *   Activate the virtual environment (`source env/bin/activate` on MacOS/Linux or `env/Scripts/activate` on Windows).\n",
-      "    *   Install the required packages using `pip install -r ../requirements.txt`.\n",
-      "    *   Run the Python files within this activated environment.\n",
-      "    *   Remember to have Docker images up and running first.\n",
-      "3.  **Permissions:**\n",
+      "2.  **For running Java Kafka producer/consumer/kstreams:**\n",
       "\n",
-      "    *   If you encounter a \"Permission denied\" error when running `build.sh`, use the command `chmod +x build.sh` in the `/docker/spark` directory.\n"
+      "    *   Navigate to the project directory in your terminal.\n",
+      "    *   Run the command: `java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java` (replace `<jar_name>` with the actual name of your JAR file).\n",
+      "\n",
+      "3.  **If you encounter a \"Permission denied\" error when running `build.sh` (likely in the `/docker/spark` directory):**\n",
+      "\n",
+      "    *   Run the command `chmod +x build.sh` in the terminal within that directory to make the script executable.\n"
      ]
     }
    ],
@@ -3944,7 +3948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "bd8be667-2cc0-4676-b3a5-4dd171fb6af4",
    "metadata": {},
    "outputs": [
@@ -3952,22 +3956,387 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, you can. Even though you missed the start date, you can register for the course. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
+      "Yes, you can register for the course even if you missed the start date. However, you won’t be able to submit some of the homeworks, but you can still take part in the course.\n"
      ]
     }
    ],
    "source": [
-    "q = 'the course started already. can i still enrol?'\n",
+    "q = 'the course started already. can i still enroll?'\n",
+    "rag(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95370c50-5783-4d24-917e-a26a158a2ed5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e85f4c2c-ed82-4bd9-8f5e-4484438efbf7",
+   "metadata": {},
+   "source": [
+    "### Replace toy-search with Elastic search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5fe298ed-ad58-4b5e-be3e-5f05df72be01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from elasticsearch import Elasticsearch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95dd1583-d7ff-47b1-bfeb-021176cfdaaa",
+   "metadata": {},
+   "source": [
+    "#### 1. Initialize client "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bcfa2377-c435-4aef-845e-b38de1aa8485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch(\"http://localhost:9200\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e69cbeea-780d-4d96-b3a1-ac69b1d202bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_60352/3063852820.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es_client.indices.create(index=index_name, body=index_settings)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# JSON format\n",
+    "index_settings = {\n",
+    "    \"settings\": {\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    },\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"}\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "index_name = 'course-questions'\n",
+    "\n",
+    "# ES tables are persistent.\n",
+    "es_client.indices.create(index=index_name, body=index_settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaafe03b-94c2-43da-b7fa-7a1874d7849f",
+   "metadata": {},
+   "source": [
+    "#### 2. Populate the ES table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0e6b3d65-41e5-485f-b904-8f8a1fb38ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "89d67d89-de89-4723-9c93-f047ac86e399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1120/1120 [00:03<00:00, 337.44it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in tqdm(documents):\n",
+    "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5860269e-7c6e-4d8f-95af-3ad98dcf004c",
+   "metadata": {},
+   "source": [
+    "#### 3. Search is now available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "99b80f9c-af73-4fed-ae00-7519188b63bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"Data Engineering Zoomcamp FAQ\\nData Engineering Zoomcamp FAQ\\nThe purpose of this document is to capture Frequently asked technical questions\\nEditing guidelines:\\nWhen adding a new FAQ entry, make sure the question is “Heading 2”\\nFeel free to improve if you see something is off\\nDon’t change the formatting in the Data document or add any visual “improvements” (make a copy for yourself first if you need to do it for whatever reason)\\nDon’t change the pages format (it should be “pageless”)\\nAdd name and date for reference, if possible\\nThe next cohort starts January 13th 2025. More info at DTC.\\nRegister before the course starts using this link.\\nJoint the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       " 'section': 'General course-related questions',\n",
+       " 'question': 'Course - When does the course start?',\n",
+       " 'course': 'data-engineering-zoomcamp'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5d0b5f54-1b75-4cdc-8cc0-6bdbbd858301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the course started already. can i still enroll?'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "56592efd-8937-4884-81b4-83b49cf26593",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_60352/1449106185.py:21: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  search_response = es_client.search(index=index_name, body=search_query)\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_query = {\n",
+    "    \"size\": 5,\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": q,\n",
+    "                    \"fields\": [\"question^3\", \"section\", \"text\"],\n",
+    "                    \"type\": \"best_fields\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\n",
+    "                \"term\": {\n",
+    "                    \"course\": \"data-engineering-zoomcamp\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "search_response = es_client.search(index=index_name, body=search_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1cb7d334-7abb-4d77-9208-694036b5e863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context = []\n",
+    "\n",
+    "for response in search_response['hits']['hits']:\n",
+    "    context.append(response['_source'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3352842-ffbf-48fa-add9-71287ed8be33",
+   "metadata": {},
+   "source": [
+    "### Since all is set up, we can modularize the Elastic search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c321f1c5-1697-4ba4-8898-569260b0b5be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_search(query):\n",
+    "    search_query = {\n",
+    "        \"size\": 5,\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"must\": {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"question^3\", \"section\", \"text\"],\n",
+    "                        \"type\": \"best_fields\"\n",
+    "                    }\n",
+    "                },\n",
+    "                \"filter\": {\n",
+    "                    \"term\": {\n",
+    "                        \"course\": \"data-engineering-zoomcamp\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    search_response = es_client.search(index=index_name, body=search_query)\n",
+    "\n",
+    "    context = []\n",
+    "\n",
+    "    for response in search_response['hits']['hits']:\n",
+    "        context.append(response['_source'])\n",
+    "        \n",
+    "    return context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "676bbb65-d21a-4872-913c-f78993b394ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_rag(query):\n",
+    "    search_results = elastic_search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c8180cad-e103-4b22-99ca-210d1d2c6d84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the course started already. can i still enroll?'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "cc9992d2-6eab-459e-9811-ad2234aa2de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_60352/15812511.py:22: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  search_response = es_client.search(index=index_name, body=search_query)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Yes, you can still join the course even after the start date. You can also start learning and submitting homework without registering.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elastic_rag(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "077a7f8b-27fb-48a4-9d28-04356bae4e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, you can still register for the course even if you missed the start date.\n"
+     ]
+    }
+   ],
+   "source": [
     "rag(q)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c0ef26-14a1-4b5d-90f4-826b7c0542fb",
+   "id": "e57b95f9-4759-4a8d-8f8f-f6459e1cf5ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "es_client.indices.delete(index=index_name)"
+   ]
   }
  ],
  "metadata": {
